[package]
name = "mouse-leveldb"
version = "0.1.1"
authors = ["Yoshida Shin <wbcchsyn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

license = "LGPL-3.0-or-later OR Apache-2.0 OR BSD-2-Clause"

[dependencies]
leveldb-sys = "2.0"
once_cell = "1.5"

[dev-dependencies]
tempfile = "3.2"
